--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="gc">
         <div class="left">
             <div class="box w-auto h-auto bg-[#cccccc1f] m-4 rounded-xl flex justify-between  items-center sm:flex-row flex-col">
-           <div class="img sm:w-1/3 w-auto "><img class="w-max h-[220px] md:object-cover  object-contain overflow-hidden" src="../img/python.jpg" alt="none"></div>
+           <div class="img sm:w-1/3 w-auto "><img class="w-max h-[220px] md:object-cover  object-contain overflow-hidden" src="./python.jpg" alt="none"></div>
            <div class="content sm:text-right text-center mr-6 sm:mt-0 mt-4 ">
                <h1 class="text-4xl font-medium text-white">Python Projects</h1>
                <p class="text-white mb-4">Last Updated : 2 days ago</p>
@@ -103,7 +103,7 @@
 
         <div class="right">
             <div class="box w-auto h-auto bg-[#cccccc1f] m-4 rounded-xl flex justify-between  items-center sm:flex-row-reverse flex-col">
-           <div class="img sm:w-1/3 w-auto "><img class="w-max h-[220px] md:object-cover  object-contain overflow-hidden" src="../img/javascript.png" alt="none"></div>
+           <div class="img sm:w-1/3 w-auto "><img class="w-max h-[220px] md:object-cover  object-contain overflow-hidden" src="./javascript.png" alt="none"></div>
            <div class="content sm:text-left text-center ml-6 sm:mt-0 mt-4 ">
                <h1 class="text-4xl font-medium text-white">Javascript Projects</h1>
                <p class="text-white mb-4">Last Updated : 2 days ago</p>
@@ -117,7 +117,7 @@
         </div>
         <div class="left">
             <div class="box w-auto h-auto bg-[#cccccc1f] m-4 rounded-xl flex justify-between  items-center sm:flex-row flex-col">
-           <div class="img sm:w-1/3 w-auto "><img class="w-max h-[220px] md:object-cover  object-contain overflow-hidden" src="../img/photoshop.png" alt="none"></div>
+           <div class="img sm:w-1/3 w-auto "><img class="w-max h-[220px] md:object-cover  object-contain overflow-hidden" src="./photoshop.png" alt="none"></div>
            <div class="content sm:text-right text-center mr-6 sm:mt-0 mt-4 ">
                <h1 class="text-4xl font-medium text-white">Photoshop Projects</h1>
                <p class="text-white mb-4">Last Updated : 2 days ago</p>
